--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.11.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.11.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.11.0/firebase-database-compat.js"></script>
-    <script src="_firebaseConfig.js"></script>
+    <script src="firebaseConfig.js"></script>
     <style>
         body { font-family: Arial, sans-serif; }
         .container { max-width: 600px; margin: 0 auto; padding: 20px; }
